torchlite-backend/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: torchlite-backend-prod-deployment
spec:
  selector:
    matchLabels:
      app: torchlite-backend-prod-app
  replicas: 2
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        app: torchlite-backend-prod-app
    spec:
      volumes:
        - name: registry-cert
          secret:
            secretName: registryapi-prod-cert
            items:
              - key: tls.crt
                path: crt
              - key: tls.key
                path: key
      containers:
        - name: torchlite-backend-prod-app
          image: ghcr.io/htrc/torchlite-backend:main-d847d82
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: registry-cert
              mountPath: "/etc/credentials"
              readOnly: true
          livenessProbe:
            httpGet:
              path: /health/liveness
              port: 8000
            initialDelaySeconds: 3
            periodSeconds: 10
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /health/readiness
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 20
      imagePullSecrets:
        - name: dockerconfigjson-github-com
