torchlite-backend/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: torchlite-backend-prod-ingress
  annotations:
    #kubernetes.io/ingress.class: public
    #nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: buypass
spec:
  rules:
    - host: torchlite-api.htrc.illinois.edu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: torchlite-backend-prod-service
                port:
                  number: 8000
  tls:
    - hosts:
      - torchlite-api.htrc.illinois.edu
      secretName: torchlite-backend-prod-ingress-cert
